# spaction

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac  cpplint.custom
spaction/: Makefile.am  main.cpp  spaction.1
spaction.xcodeproj/: project.pbxproj
spaction.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
spaction.xcodeproj/xcuserdata/alvae.xcuserdatad/xcschemes/: spaction.xcscheme  spactiontest.xcscheme  xcschememanagement.plist
spaction/include/: AtomicProposition.h  BinaryOperator.h  CltlFormula.h  CltlFormulaFactory.h  CltlFormulaVisitor.h  CltlInstantiator.h  ConstantExpression.h  Instantiator.h  Logger.h  MultOperator.h  UnaryOperator.h  atomic.h  bdd_util.h  binop.h  cltl.h  cltl2spot.h  constant.h  spotcheck.h  unop.h  visitor.h
spaction/include/automata/: CA2tgba.h  CltlTranslator.h  ConfigurationAutomaton.h  ControlBlock.h  CostRegisterAutomaton.h  CounterAutomaton.h  CounterAutomatonProduct.h  DeterministicTransitionSystem.h  RegisterAutomaton.h  SupremumFinder.h  TGBA2CA.h  TSPrinter.h  TransitionSystem.h  TransitionSystemPrinter.h  TransitionSystemProduct.h  UndeterministicTransitionSystem.h
spaction/include/cltlparse/: CLTLScanner.h  public.h  public.hh
spaction/include/cra/: CltlTranslator.h  CostRegisterAutomata.h  CostRegisterAutomaton.h
spaction/include/hash/: hash.h
spaction/src/: AtomicProposition.cpp  BinaryOperator.cpp  CltlFormulaFactory.cpp  CltlFormulaVisitor.cpp  CltlInstantiator.cpp  ConstantExpression.cpp  Instantiator.cpp  Makefile.am  MultOperator.cpp  UnaryOperator.cpp  atomic.cc  binop.cc  cltl.cc  cltl2spot.cpp  constant.cc  printer.cc  spotcheck.cc  unop.cc
spaction/src/automata/: CltlTranslator.cpp  CounterAutomaton.cpp
spaction/src/cltlparse/: .gitignore  Makefile.am  cltllex.ll  cltlparse.yy
spactiontest/: Makefile.am  main.cpp  spactiontest.1
